# ww_plants

./: .conform.yaml  .gitignore  LICENSE  README.md  lefthook.yml  pyproject.toml
src/: main.py
tests/unit/: test_main.py
